[workspace]
package.edition = "2021"
resolver = "2"
members = [
	"redefi-runtime",
	"redefi-runtime/constants",
	"pallets/evm-coder-substrate",
	"pallets/balances-adapter",
	"pallets/evm-assets",
]


[profile.release]
# Runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.dependencies]
# Redefi 
polkadot-runtime-constants = { package = "polkadot-runtime-constants", path = "redefi-runtime/constants", default-features = false }
pallet-evm-coder-substrate = { package = "pallet-evm-coder-substrate", path = "pallets/evm-coder-substrate", default-features = false }
pallet-evm-transaction-payment = { package = "pallet-evm-transaction-payment", path = "pallets/evm-transaction-payment", default-features = false }
pallet-balances-adapter = { package = "pallet-balances-adapter", path = "pallets/balances-adapter", default-features = false }
pallet-evm-assets = { path = "pallets/evm-assets", default-features = false }

bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec", features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.22", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_derive = "1.0.117"
static_assertions = "1.1.0"
smallvec = "1.8.0"

cumulus-primitives-core = { default-features = false, version = "0.14.0" }
# cumulus-pallet-xcmp-queue = { default-features = false, version = "0.15.0" }
# cumulus-pallet-parachain-system = { default-features = false, version = "0.15.0" }

sp-authority-discovery = { default-features = false, version = "33.0.0" }
sp-consensus-babe = { default-features = false, version = "0.39.0" }
sp-consensus-beefy = { default-features = false, version = "20.0.0" }
binary-merkle-tree = { default-features = false, version = "15.0.0" }
sp-block-builder = { default-features = false, version = "33.0.0" }
sp-inherents = { default-features = false, version = "33.0.0" }
sp-offchain = { default-features = false, version = "33.0.0" }
sp-transaction-pool = { default-features = false, version = "33.0.0" }
sp-arithmetic = { default-features = false, version = "26.0.0" }
sp-api = { default-features = false, version = "33.0.0" }
sp-genesis-builder = { default-features = false, version = "0.14.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-application-crypto = { default-features = false, version = "37.0.0" }
sp-io = { default-features = false, version = "37.0.0" }
sp-mmr-primitives = { default-features = false, version = "33.0.0" }
sp-runtime = { default-features = false, version = "38.0.0" }
sp-staking = { default-features = false, version = "33.0.0" }
sp-core = { default-features = false, version = "34.0.0" }
sp-session = { default-features = false, version = "34.0.0" }
sp-storage = { default-features = false, version = "21.0.0" }
sp-version = { default-features = false, version = "36.0.0" }
sp-npos-elections = { default-features = false, version = "33.0.0" }
sp-weights = { default-features = false, version = "31.0.0" }

pallet-asset-rate = { default-features = false, version = "15.0.0" }
pallet-authority-discovery = { default-features = false, version = "36.0.0" }
pallet-authorship = { default-features = false, version = "36.0.0" }
pallet-babe = { default-features = false, version = "36.0.0" }
pallet-bags-list = { default-features = false, version = "35.0.0" }
pallet-balances = { default-features = false, version = "37.0.0", features = [
	"insecure_zero_ed",
] }
pallet-beefy = { default-features = false, version = "36.0.0" }
pallet-beefy-mmr = { default-features = false, version = "36.0.0" }
pallet-bounties = { default-features = false, version = "35.0.0" }
pallet-child-bounties = { default-features = false, version = "35.0.0" }
pallet-transaction-payment = { default-features = false, version = "36.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "36.0.0" }
pallet-collective = { default-features = false, version = "36.0.0" }
pallet-conviction-voting = { default-features = false, version = "36.0.0" }
pallet-democracy = { default-features = false, version = "36.0.0" }
pallet-elections-phragmen = { default-features = false, version = "37.0.0" }
pallet-election-provider-multi-phase = { default-features = false, version = "35.0.0" }
pallet-fast-unstake = { default-features = false, version = "35.0.0" }
frame-executive = { default-features = false, version = "36.0.0" }
pallet-grandpa = { default-features = false, version = "36.0.0" }
pallet-identity = { default-features = false, version = "36.0.0" }
pallet-im-online = { default-features = false, version = "35.0.0" }
pallet-indices = { default-features = false, version = "36.0.0" }
pallet-membership = { default-features = false, version = "36.0.0" }
pallet-message-queue = { default-features = false, version = "39.0.0" }
pallet-mmr = { default-features = false, version = "35.0.0" }
pallet-multisig = { default-features = false, version = "36.0.0" }
pallet-nomination-pools = { default-features = false, version = "33.0.0" }
pallet-nomination-pools-runtime-api = { default-features = false, version = "31.0.0" }
pallet-offences = { default-features = false, version = "35.0.0" }
pallet-preimage = { default-features = false, version = "36.0.0" }
pallet-proxy = { default-features = false, version = "36.0.0" }
pallet-referenda = { default-features = false, version = "36.0.0" }
pallet-scheduler = { default-features = false, version = "37.0.0" }
pallet-session = { default-features = false, version = "36.0.0" }
frame-support = { default-features = false, version = "36.0.0" }
pallet-staking = { default-features = false, version = "36.0.0" }
pallet-staking-reward-fn = { default-features = false, version = "22.0.0" }
pallet-staking-reward-curve = "12.0.0"
pallet-staking-runtime-api = { default-features = false, version = "21.0.0" }
pallet-sudo = { default-features = false, version = "36.0.0" }
frame-system = { default-features = false, version = "36.0.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "33.0.0" }

pallet-timestamp = { default-features = false, version = "35.0.0" }
pallet-tips = { default-features = false, version = "35.0.0" }
pallet-treasury = { default-features = false, version = "35.0.0" }
pallet-whitelist = { default-features = false, version = "35.0.0" }
pallet-vesting = { default-features = false, version = "36.0.0" }
pallet-utility = { default-features = false, version = "36.0.0" }
frame-election-provider-support = { default-features = false, version = "36.0.0" }
pallet-xcm = { default-features = false, version = "15.0.0" }
pallet-xcm-benchmarks = { default-features = false, version = "15.0.0" }

frame-benchmarking = { default-features = false, version = "36.0.0" }
frame-try-runtime = { default-features = false, version = "0.42.0" }
frame-system-benchmarking = { default-features = false, version = "36.0.0" }
pallet-election-provider-support-benchmarking = { default-features = false, version = "35.0.0" }
pallet-offences-benchmarking = { default-features = false, version = "36.0.0" }
pallet-session-benchmarking = { default-features = false, version = "36.0.0" }
pallet-nomination-pools-benchmarking = { default-features = false, version = "34.0.0" }
hex-literal = "0.4.1"

polkadot-runtime-common = { default-features = false, version = "15.0.0" }
polkadot-runtime-parachains = { default-features = false, version = "15.0.0" }
polkadot-primitives = { default-features = false, version = "14.0.0" }

xcm = { package = "staging-xcm", default-features = false, version = "14.0.1" }
xcm-executor = { package = "staging-xcm-executor", default-features = false, version = "15.0.0" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "15.0.0" }

# Unique
up-sponsorship = { default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "polkadot-v1.9.0" }

# Frontier
pallet-ethereum = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-self-contained = { default-features = false, features = [
	"serde",
], git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }

# EVM
evm-coder = { version = "=0.4.3", default-features = false, features = [
	'bondrewd',
] }
evm-core = { version = "0.41.0", default-features = false }

tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", version = "38.0.0" }
sp-trie = "36.0.0"
separator = "0.4.1"
remote-externalities = { package = "frame-remote-externalities", version = "0.43.0" }
tokio = { version = "1.24.2", features = ["macros"] }
sp-tracing = { default-features = false, version = "17.0.0" }

serde_json = { version = "1.0.111", default-features = false, features = [
	"arbitrary_precision",
] }

#Build
substrate-wasm-builder = "23.0.0"
